@@ -2,4 +2,4 @@
 set -o errexit -o nounset -o pipefail
 cd "$(dirname "$0")/.."
 
-clj $@ -J--add-opens=java.base/java.io=ALL-UNNAMED -M -m user
+clj $@ -J-Djdk.attach.allowAttachSelf -J-XX:+UnlockDiagnosticVMOptions -J-XX:+DebugNonSafepoints -J--add-opens=java.base/java.io=ALL-UNNAMED -M -m user
